tests/ui/parser/misspelled-keywords/impl-trait-for.stderr
error: expected one of `!`, `(`, `+`, `::`, `<`, `where`, or `{`, found `Human`
  --> $DIR/impl-trait-for.rs:3:17
   |
LL | impl Debug form Human {}
   |                 ^^^^^ expected one of 7 possible tokens
   |
help: there is a keyword `for` with a similar name
   |
LL - impl Debug form Human {}
LL + impl Debug for Human {}
   |

error: aborting due to 1 previous error

