tests/ui/parser/misspelled-keywords/impl-trait-for.rs
struct Human;

impl Debug form Human {}
//~^ ERROR expected one of

fn main() {}
